<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">


    <TextView
        android:id="@+id/activity_f_two_name_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/textview_padding"
        android:paddingRight="@dimen/textview_padding"
        android:textAppearance="@android:style/TextAppearance.Medium"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/default_padding"
        android:paddingRight="@dimen/default_padding"
        android:paddingBottom="@dimen/default_padding"
        android:gravity="center_horizontal"
        >

        <Button
            android:id="@+id/activity_f_two_exit"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/default_button_height"
            android:minWidth="@dimen/min_button_width"
            style="@style/Widget.AppCompat.Button.Colored"
            android:padding="@dimen/default_padding"
            android:text="@string/exit"/>

        <Button
            android:id="@+id/activity_f_two_clear"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/default_button_height"
            android:layout_marginLeft="@dimen/default_button_padding"
            android:minWidth="@dimen/min_button_width"
            style="@style/Widget.AppCompat.Button.Colored"
            android:padding="@dimen/default_padding"
            android:text="@string/clear"/>
    </LinearLayout>
</LinearLayout>