<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <Button
        android:id="@+id/activity_home_feature_one_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feature_one"
        android:layout_marginBottom="@dimen/default_padding"
        style="@style/Widget.AppCompat.Button.Colored"/>
    <Button
        android:id="@+id/activity_home_feature_two_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feature_two"
        style="@style/Widget.AppCompat.Button.Colored"/>
</LinearLayout>